lab1/Test/L1-A-12-65.output
Error Type A at Line 5
Error Type B at Line 7
Error Type A at Line 18
Error Type A at Line 21
Error Type A at Line 33
Error Type A at Line 35
