lab1/Test/L1-A-12-65.cmm
int SZLbATI ( int ErSNidK_ , struct {
  struct FYzGTfJgUNnOA {
    struct fefM7ot7ZHbYu6Voo wvlZb8AjfLjo325r ;
    int Qes2 ;
  }DN7lW2bQ_qjdOp6goT , O ~;
}pPhDizoS8V7_NH579b ) {
  int eFi4w57f = V1XGsWLJGs3 || == _fm7GMJ + Iv6p8H4mKjJwoldIprQ 
    * nkzmUWnBk9P [ MQI8t = SHlK = Dh6PYcGFLg && JiNopDla4qmA 
    >= EhT9sstf7A8gM3DbvsdG / - ( hbOQ = mcbLjI_nx96JdvHlNS 
    || nGL6lvlxmug0 && EaD5CuGN2abwlsb ( WSYcOCLHMjq || 
    FzV5R5 != p4FT / LSLEsVJSKpFE0Q ( ZLTgXEKc , Q > rCDtz7xswr 
    - HpnI7YuMJCj8A7 ( OHxU1uIJ_ECXa || zruBwMC79ygelB0b 
    < Ymse2QNgvJVTt [ XJlb <= em ] ) - 1036307018.248104395 
    / j8X . K . mEW3AFZE / 269872131 ) ) ) - - ! - BcMB8ULI0TT9U 
    ( ) . _Fku5x9bapau ] ;
}
struct zlHT ;
:float aIhvSiVD9OxMsTlj8O , qM3qFwQeZzJ9jN2 [ 578239383 
  ] 

;$
int xJi ( ) {
  tTnI2uOZ46Wxzeyd ;
}
int ;
int SlhHVMSQEY ( ) {
}
int ;
int tGpWH2RFb ( ) {
}
int ;
int ;
int pOFOzneSGQiW8 ( ) ~{
  if ( CLryVlNnrNTpP ) {
    bmBMmmq ;$
    u ;
    if ( P3LHXW2_uGiasqFA )     zDCvscw4hcJtb ;
else     X_Y8mD ;

  }else   if ( Lm478Atdj9 )   while ( xnkLl51gmjEJhcgjukq 
    )   return ZJvC6xiQz5 ;



}
int d9zOpYFJ70wD73 ( ) {
}
